@@ -1,6 +1,6 @@
 =head1 NAME
 
-oarextratime - request or query extra time for a job handled by the OAR batch scheduler.
+oarextratime - query or request an extra time for a job handled by the OAR batch scheduler.
 
 =head1 SYNOPSIS
 
@@ -8,13 +8,15 @@ B<oarextratime> [options] <job_id> [duration]
 
 =head1 DESCRIPTION
 
-This command allows users to request or query extra time for a job.
+This command manages extra time requests for a job.
 
-If I<duration> is given, the command requests the addition of that duration to the walltime of the job, or update a previous request.
+If no I<duration> is given, the command shows the current extra time status for the job.
 
-If I<duration> is not given, the command shows the current extra time status for the job.
+If a I<duration> is given, the command requests the addition of that duration to the walltime of the job, or update a pending request.
 
-Job must be I<running>.  Extra time is to be given as an number of seconds.
+The extra time I<duration> is to be given as a number of seconds.
+
+The job must be running to request extra time.
 
 Once a request is registered, it will by handled during the next pass of scheduling and granted if it fits with other jobs.
 
@@ -54,7 +56,7 @@ Configuration can be set per queue.
 
 I<Read your local documentation or ask your administrator(s) to know the configured settings.>
 
-The extra time functionality does not support the computation of the resources shared allocation in the case of jobs of type timesharing or container/inner or placeholder/allowed.
+The extra time functionality does not support the computation of the shared allocation of resources, in the case of jobs of type timesharing or container/inner or placeholder/allowed.
 
 =head1 SEE ALSO
 
@@ -62,4 +64,4 @@ oarstat(1), oarsub(1), oardel(1)
 
 =head1 COPYRIGHTS
 
- Copyright 2003-2016 Laboratoire d'Informatique de Grenoble (http://www.liglab.fr). This software is licensed under the GNU General Public License Version 2 or above. There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+ Copyright 2003-2017 Laboratoire d'Informatique de Grenoble (http://www.liglab.fr). This software is licensed under the GNU General Public License Version 2 or above. There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
